<?xml version="1.0"?>
<package format="2">
    <name>lanes_mono</name>
    <version>0.0.0</version>
    <description>The lanes mono</description>


    <maintainer email="sachi@todo.todo">sachi</maintainer>
    <maintainer email="suraj@todo.todo">suraj</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>sensor_messages</build_depend>

    <depend>roscpp</depend>
    <depend>visual_opencv</depend>
    <depend>tf</depend>
</package>
