<?xml version="1.0"?>
<package format="2">
    <name>lanes_mono</name>
    <version>0.0.0</version>
    <description>The lanes mono</description>


    <maintainer email="sachi@todo.todo">sachi</maintainer>
    <maintainer email="suraj@todo.todo">suraj</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>


    <depend>roscpp</depend>

    <depend>cv_bridge</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>image_geometry</depend>
    <depend>image_transport</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>

</package>
